--- a/farmlyfe/pubspec.yaml
+++ b/farmlyfe/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   intl: ^0.17.0
   shimmer: ^2.0.0
   flutter_launcher_icons: ^0.12.0
+  firebase_storage: ^11.1.0
 
 dev_dependencies:
   flutter_test:
